# proglad

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
agent-templates/rust/: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  textapi.rs  visualize.rs
controller/: Cargo.toml
controller/src/: io.rs  lib.rs  manager.rs  match_runner.rs
games/halma-quad/: index.html
games/halma-quad/player-basic/: basic.py
games/halma-quad/player-greedy/: main.rs
games/halma-quad/server/: in  main.rs
games/lowest-unique/: index.html
games/lowest-unique/player-counting/: main.cc
games/lowest-unique/player-random/: main.go  main.py
games/lowest-unique/server/: main.rs
server/: .env  Cargo.toml
server/db/: Cargo.toml
server/db/src/: accounts.rs  acls.rs  bots.rs  common.rs  files.rs  games.rs  lib.rs  match_participations.rs  matches.rs  prelude.rs  programs.rs  stats_history.rs  work_items.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20240703_005741_create_tables.rs  m20240905_125904_refresh_matches_index.rs  m20240908_140157_create_stats_history.rs  m20240920_235707_create_work_items.rs  m20241001_210358_create_files_table.rs  m20241006_193744_create_acls_table.rs  m20241012_214559_populate_assets.rs  main.rs
server/src/: account.rs  acl.rs  bot.rs  config.rs  engine.rs  file_store.rs  http_types.rs  kratos.rs  lib.rs  main.rs  scheduler.rs  server.rs  server_state.rs  validation.rs
server/src/handlers/: get_bots.rs  get_edit_game.rs  get_files.rs  get_game.rs  get_games.rs  get_index.rs  get_logout.rs  get_matches.rs  get_replay.rs  get_source.rs  get_visualizer.rs  kratos_hooks.rs  mod.rs  post_create_bot.rs  post_edit_bot.rs  post_edit_game.rs  post_schedule_match.rs  prelude.rs  tmpl_data.rs
server/static/: bots.css  cards.css  edit_game.css  game.css  index.css  readme.html  visualize.rs  writing-a-game-server.html
server/static/games/: common.css
server/static/visualizer/: proglad_visualizer.js  proglad_visualizer_bg.wasm  visualizer.css
server/templates/: bots.hbs  creatematch.hbs  edit_game.hbs  game.hbs  game_rules.hbs  games.hbs  main.hbs  matches.hbs  visualizer.hbs
server/tests/: integration_test.rs
tools/: Cargo.toml
visualizer-svg/: Cargo.toml  build.sh  index.html
visualizer-svg/src/: lib.rs  svg.rs
