[package]
name = "proglad-controller"
version = "0.1.0"
authors = ["Konstantin Mandelbaum <submulticativity@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.11", features = ["gzip", "tokio"] }
futures-util = { version = "0.3.30", features = ["sink", "io"] }
log = "0.4.21"
nix = { version = "0.29.0", features = ["fs"] }
proglad-api = { path = "../api" }
serde = { version = "1.0.209", features = ["derive"] }
tempfile = "3.10.1"
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-std", "io-util", "net", "time", "macros", "process", "fs"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.19"
