[package]
name = "proglad-controller"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "0.4.11", features = ["gzip", "tokio"] }
futures-util = { version = "0.3.30", features = ["sink", "io"] }
log = { workspace = true }
nix = { version = "0.29.0", features = ["fs"] }
proglad-api = { workspace = true }
serde = { workspace = true }
tempfile = "3.10.1"
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }

