[package]
name = "proglad-server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
integration_tests = []

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.8.0"
anyhow = { workspace = true }
derive_more = "0.99.18"
env_logger = "0.11.3"
flate2 = { workspace = true }
handlebars = { version = "5.1.2", features = ["dir_source"] }
log = { workspace = true }
mime = "0.3.17"
ory-kratos-client = { version = "1.1.0" }
proglad-controller = { workspace = true }
proglad-db = { workspace = true }
rand = "0.8.5"
reqwest = "0.11.27"
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proglad-migration = { workspace = true }
tempdir = { workspace = true }

[dev-dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
