[package]
name = "tools"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }
proglad-api = { workspace = true }
proglad-server = { workspace = true }
proglad-db = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde_json = "1.0.117"

[features]
legacy-source-code-field = []

[[bin]]
name = "move-source"
required-features = ["legacy-source-code-field"]

[[bin]]
name = "update-source"
