[package]
name = "proglad-visualizer"
version = "0.1.0"
authors = ["Konstantin Mandelbaum <submulticativity@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.11.3"
log = "0.4.21"
nalgebra = "0.32.5"
proglad-api = { version = "0.1.0", path = "../api" }
serde = { version = "1.0.203", features = ["derive"] }
serde-hjson = "1.0.0"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["Window", "HtmlElement", "Document", "HtmlInputElement", "Response", "Performance", "Node", "SvgsvgElement", "SvgCircleElement", "SvgTextElement", "SvgLineElement", "SvgGraphicsElement", "SvgRect", "SvgAnimatedRect", "HtmlCollection", "DomTokenList", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition", "SvgPolygonElement"] }

[lib]
crate-type = ["cdylib"]
