[package]
name = "proglad-migration"
version = "0.1.0"
authors = ["Konstantin Mandelbaum <submulticativity@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
proglad-db = { path = "../db" }
tokio = { version = "1.38.0", features = ["fs"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
