[package]
name = "proglad-migration"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
proglad-db = { workspace = true }
tokio = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
